--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@
   text-align: center;
   color: white;
   border-radius: 48px;
-  transition: transform 200ms ease-out;
+  transition: transform 200ms cubic-bezier(0.33, 1, 0.68, 1);
   cursor: default;
 }
 
